# bufjson

./: .gitignore  COMPARE.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  default  err.json  example.json  next.json  test_cfg_param
.github/workflows/: build.yaml  doc.yaml  lint.yaml  no_std.yaml  test.yaml
benches/: common.rs  generator.rs  throughput.rs  trivial_benchmark.rs
benches/common/: mod.rs
benches/generator/: keys.rs  lorem.rs
scripts/: push.sh  verify-git-hook.sh  verify.sh
src/: .lexical.rs.swp  .lib.rs.swp  lex.rs  lexical.rs  lib.rs  pointer.rs  syn.rs  syntax.rs
src/lex/: buf.rs  mach.rs  stream.rs
src/lexical/: buf.rs  fixed.rs  pipe.rs  read.rs  state.rs
src/lexical/stream/: async.rs  sync.rs
src/pointer/: eval.rs  group.rs  state.rs
